<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            app:srcCompat="@drawable/cal"
            android:layout_gravity="end"
            android:background="@drawable/round_boarder"
            android:backgroundTint="@color/secondary"
            android:contentDescription="@string/add_recipe" />

    <EditText
        android:id="@+id/mealtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meal_type"
        android:textColorHint="@color/primary"
        android:inputType="number"
        android:textColor="@color/primary"/>
    <EditText
        android:id="@+id/recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipes"
        android:inputType="number"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"/>



</LinearLayout>
