<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@drawable/container"
    android:layout_margin="8dp"
    android:padding="5dp">

    <TextView
        android:id="@+id/authorName"
        android:layout_width="119dp"
        android:layout_height="36dp"
        android:layout_marginTop="6dp"
        android:hint="@string/author"
        android:paddingTop="8dp"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postedTime"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginEnd="44dp"
        android:hint="@string/postedTime"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/post"
        android:layout_width="346dp"
        android:layout_height="91dp"
        android:hint="@string/post1"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorName"
        app:layout_constraintVertical_bias="0.0" />

    <RatingBar
        android:id="@+id/blog_rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="80dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/likebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="220dp"
        android:background="@drawable/round_boarder"
        android:backgroundTint="@color/secondary"
        android:contentDescription="@string/add_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post"
        app:srcCompat="@drawable/like" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dislikebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="4dp"
        android:background="@drawable/round_boarder"
        android:backgroundTint="@color/secondary"
        android:contentDescription="@string/add_recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/likebtn"
        app:layout_constraintTop_toBottomOf="@+id/post"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dislike" />


</androidx.constraintlayout.widget.ConstraintLayout>
